--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@nebular/eva-icons": "9.0.3",
+    "@nebular/eva-icons": "^9.0.3",
     "@nebular/theme": "^9.0.3",
-    "eva-icons": "^1.1.2",
+    "eva-icons": "^1.1.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
